--- a/image-gallery-web/index.html
+++ b/image-gallery-web/index.html
@@ -1,12 +1,32 @@
 <html>
   <head>
-    <title>SASSquatch</title>
+    <title>Image Gallery Web</title>
     <link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
+    <script src="js/dust-full-0.3.0.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" charset="utf-8">
+      window.onload = function() {
+        console.log('onload');
+
+        var data = {
+          'sitename': 'Image Gallery Web',
+        }
+
+        var headerTemplate = dust.compile(
+          '<h1>{sitename}</h1>',
+          'headerTemplate'
+        );
+
+        dust.loadSource(headerTemplate);
+
+        dust.render("headerTemplate", data,
+        function(err, out){
+          console.log(out);
+        });
+      }
+    </script>
   </head>
   <body>
-    <header>
-      <h1>SASSquatch</h1>
-    </header>
+    <header id="header"></header>
     <section>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
